# river-rrcf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.toml
.github/workflows/: release.yaml  test.yaml
src/river_rrcf/: __init__.py  rrcf.py
src/river_rrcf/_vendor/rrcf/: __init__.py  rrcf.py
tests/: misc_test.py  river_test.py  rrcf_test.py
